@@ -20,7 +20,7 @@
 	    </div>
 	</div>
     </div>
-    <input type="hidden" id="inputAcl<?= $this->name ?>" name="acl" value="" />
+    <input type="hidden" id="inputAcl<?= $this->name ?>" name="member" value="" />
     <script>
 	$(window).load(function() {
 	    mem_updateAclField('<?= $this->name ?>');
