@@ -1,0 +1,10 @@
+<?php
+
+class Knowledgeroot_Db_GroupMember extends Knowledgeroot_Db_Table_Abstract
+{
+	protected $_name = 'group_member';
+	protected $_primary = 'id';
+	protected $_sequence = 'seq_group_member';
+}
+
+?>
