@@ -1,3 +1,6 @@
+20130810 - fhabermann
+* added memberpanel
+
 20130726 - fhabermann
 * removed unused scripts
 * doing translations
